--- a/project.css
+++ b/project.css
@@ -89,7 +89,7 @@ body {
     cursor: pointer;
   }
 
-/* Main container for both left and right content */
+
 .container {
   display: flex;
   justify-content: space-between; 
@@ -98,45 +98,44 @@ body {
 
 }
 
-/* Left section containing the image and text */
-.left {
+.leftside {
   display: flex;
   flex-direction: column; 
   gap: 24px; 
   width: 60%;
 }
 
-.image-box {
+.image {
   width: 100%; 
   
 }
 
-.image-box img {
+.image img {
   width: 85%;
   height: auto;
   border: none;
   object-fit: cover; 
 }
 
-.text-box {
+.text {
   width: 65%; 
 }
 
-.text-box h2 {
+.text h2 {
   
   color: black;
   margin-bottom: 16px;
  
 }
 
-.text-box p {
+.text p {
   
   color: gray;
   margin-bottom: 24px;
 }
 
-/* Right section with images and text to the right of each image */
-.right {
+
+.rightside {
   display: flex;
   flex-direction: column; 
   gap: 24px; 
@@ -145,17 +144,14 @@ body {
 
  
 
-.right-item {
+.imageitem {
   display: flex;
   align-items: center; 
   gap: 16px; 
 }
 
-.right-item:hover{
-  background-color: gainsboro;
 
-} 
-.right-item img {
+.imageitem img {
    width: 35%;
   height: auto; 
 
@@ -164,25 +160,25 @@ body {
 }
 
 
-.right-text {
+.rightsidetext {
   width: 40%; 
   text-align: left; 
   gap:8px;
 }
 
-.right-text p {
+.rightsidetext p {
   margin: 0;
   font-size: 0.80rem;
   color: gray;
   margin-bottom: 8px;
 
 }
-.right-text p a{
+.rightsidetext p a{
   gap: 8px;
 } 
 
 
-.learning-section {
+.learningsection {
   max-width: 1200px;
 
   margin: 0 auto;
@@ -233,7 +229,7 @@ body {
 
 .card-description {
   font-size: 0.875rem;
-  color: rgb(120, 118, 118);
+  color: gray;
   padding-left: 16px;
  gap : 8px;
 
@@ -241,9 +237,8 @@ body {
 
 
 .container1 {
-  /* display: flex; */
+  
   flex-direction: column;
-  /* max-width: 960px; */
   margin: 0 auto;
   padding: 24px;
 
@@ -267,11 +262,11 @@ body {
 .main-video {
   flex: 60%;
   min-width: 300px;
-  /* background: #e0e0e0; */
+  
   display: flex;
   justify-content: center;
   align-items: center;
-  /* height: 300px; */
+ 
 }
 
 .main-video video {
@@ -318,7 +313,7 @@ body {
 
 .footer1 {
   margin-top: 32px;
-  /* text-align: center; */
+  
   margin-left: 24px;
 }
 
@@ -328,7 +323,7 @@ body {
 }
 
 .footer1 p {
-  /* margin: 0 0 32px; */
+  
   font-size: 14px;
   color: #555;
  
@@ -336,25 +331,24 @@ body {
 }
 
 .bottom-bar {
-  /* display: flex; */
+
   justify-content: space-between;
-  /* align-items: center; */
+  
   font-size: 12px;
   color: #777;
   border-top: 1px solid #ddd;
   padding-top: 16px;
-  /* text-align: left; */
+
  
  
 }
 
 .bottom-bar a {
   color: #555;
-  /* text-decoration: none; */
+
   margin-bottom: 160px;
  
 }
 
-.bottom-bar a:hover {
-  text-decoration: underline;
-}
+
+
